@@ -1,3 +1,13 @@
+2012-08-02  Eric Seidel  <eric@webkit.org>
+
+        Add back ASSERT(!needsLayout) to RenderTableSection which is now valid
+        https://bugs.webkit.org/show_bug.cgi?id=92954
+
+        Reviewed by Julien Chaffraix.
+
+        * rendering/RenderTableSection.cpp:
+        (WebCore::RenderTableSection::paint):
+
 2012-08-02  Kevin Ellis  <kevers@chromium.org>
 
         Month-year selector on calendar picker should be touch friendly.
